# LoLUpdater

./: .gitignore  .travis.yml  Brewfile  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LoL Assets Patcher (Run as Administrator).cmd  LoL Assets Patcher.cmd  LoLUpdater.bat  LoLUpdater.cmd  LoLUpdater.command  LoLUpdater.ps1  LoLUpdater.py  LoLUpdater.sh  README.md  Restore.command  Restore.sh  Untitled.prd  appveyor.yml  build.sh  certification.cer  restore.ps1  script.ps1  signfirst.cer  sources.ps1
Source/: LoL Assets Patcher.cmd  sources.ps1
docs/: Manifest.JSON
lolupdater-cli/: Cargo.toml
lolupdater-cli/src/: main.rs
lolupdater-core/: Cargo.toml
lolupdater-core/src/: air.rs  dx9dlls.rs  errors.rs  lib.rs  util.rs  vsdlls.rs  winutil.rs
lolupdater-core/src/cef/: cef_mac.rs  cef_win.rs  mod.rs
lolupdater-core/src/cg/: cg_mac.rs  cg_win.rs  mac.rs  mod.rs  win.rs
lolupdater-gui/: Cargo.toml
lolupdater-gui/src/: main.rs
scripts/: before_deploy.ps1  before_deploy.sh  release_build.sh  script.sh
scripts/LoLUpdater.app/Contents/: Info.plist
scripts/LoLUpdater.app/Contents/Resources/: LoLUpdater.icns
src/: air.rs  cg.rs  errors.rs  help.rs  lib.rs  main.rs  util.rs  vsdlls.rs
src/cg/: cg_mac.rs  cg_win.rs  mac.rs  mod.rs  win.rs
