[package]
name = "lolupdater"
version = "3.7.2"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]

[lib]
name = "lolupdater_core"
path = "src/lib.rs"

[[bin]]
name = "lolupdater-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "lolupdater-gui"
path = "src/bin/gui.rs"

[dependencies]
app_dirs = "1.1.1"
derive-error-chain = "0.11.0"
error-chain = "0.11.0"
flate2 = "1.0.1"
lazy_static = "1.0.0"
log = "0.4.0"
regex = "0.2.2"
reqwest = "0.8.0"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"
sha2 = "0.7.0"
tempdir = "0.3.5"
# CLI App
clap = "2.29.2"
env_logger = "0.5.3"
# GUI
ui = { git = "https://github.com/davidkna/libui-rs" }
tinyfiledialogs = "3.0.4"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "0.2.3"
tar = { version = "0.4.13", default-features = false }
walkdir = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.2", features = ["combaseapi", "shlobj", "knownfolders", "ntdef", "winerror"] }
