[package]
name = "lolupdater-core"
version = "3.5.14"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]

[dependencies]
app_dirs = "1.1.1"
error-chain = "0.11.0"
lazy_static = "0.2.8"
log = "0.3.8"
ring = "0.12.1"
regex = "0.2.2"
reqwest = "0.8.0"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "0.2.19"
plist = "0.2.3"
tar = { version = "0.4.13", default-features = false }
tempdir = "0.3.5"
walkdir = "2.0.1"
xz2 = "0.1.3"
