[package]
name = "lolupdater-gui"
version = "0.1.0"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]

[dependencies.lolupdater-core]
path = "../lolupdater-core"
version = "~3.3.0"

[dependencies]
clippy = {version = "*", optional = true}
ui = { git = "https://github.com/FlyingGaz/libui-rs" }
nfd = "^0.0.4"

[features]
default = []
